k8s/mysql-statefulset.yml

apiVersion: v1
kind: Service
metadata:
  name: spring-boot-kubernetes-headless
spec:
  clusterIP: None
  selector:
    app: spring-boot-kubernetes
  ports:
  - name: application-port
    protocol: TCP
    port: 80
    targetPort: 5000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spring-boot-kubernetes
spec:
  selector:
    matchLabels:
      app: spring-boot-kubernetes # has to match .spec.template.metadata.labels
  serviceName: "spring-boot-kubernetes-headless"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: spring-boot-kubernetes # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name:  spring-boot-kubernetes
        image: docker.io/library/spring-boot-kubernetes:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 5000
        resources:
          requests:
            cpu: 500m
            memory: 1000Mi
          limits:
            cpu: 800m
            memory: 2000Mi
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-kubernetes-svc
spec:
  selector:
    app: spring-boot-kubernetes
  type: NodePort
  ports:
  - name: service-port
    protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30001
